[tool.poetry]
name = "apitest"
version = "0.1.0"
description = ""
authors = ["jinlee057 <jinlee057@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
mlflow = "^2.6.0"
prefect-sqlalchemy = "^0.2.4"
prefect = "^2.12.1"
boto3 = "^1.28.40"
psycopg2-binary = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
